[project]
name = "lanpaint-pipeline"
version = "0.1.0"
description = "LanPaint: training-free inpainting pipeline for diffusion models"
requires-python = ">=3.10"
dependencies = [
    "LanPaint @ git+https://github.com/scraed/LanPaint.git",
    "torch==2.12.0",
    "diffusers",
    "numpy",
    "Pillow",
    "scipy",
    "tqdm",
    "transformers>=5.9.0",
    "accelerate>=1.13.0",
    "streamlit>=1.40.0",
    "streamlit-drawable-canvas>=0.9.3",
    "torchvision>=0.27.0",
]

[tool.uv]
override-dependencies = ["nvidia-cudnn-cu13==9.21.1.3"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lanpaint_pipeline*"]
